# SmartTScope

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SYNC.md  SmartTScope.ui  bash.exe.stackdump  pyproject.toml  requirements.txt  resources.qrc  smart_telescope.toml  stars.cfg
.claude/: settings.json
.github/workflows/: ci.yml  hardware.yml
.obsidian/: workspace.json
configs/: default.yaml  raspberry-pi.yaml  windows-dev.yaml
docs/: SmartTScope_quickstart.md  agile-plan.md  architecture-diagram.md  architecture-review.md  autogain-tasks.md  collimation-tasks.md  hardware-test-log-template.md  milestone-plan.md  operational-acceptance-checklist.md  release-checklist.md  release-notes-v0.1.md  retrospective.md  smarttscope-final-product-architecture-ai-plan.md  test-strategy.md  todo.md
docs/skills/: smarttscope-product-steward.md  smarttscope-quality-sentinel.md
examples/: dual_camera.py
raw/: SmartTelescope.md
resources/Onstep/: main@onstep.groups.io  Wiki.md
resources/camera_adapter/: camera-runtime-api-examples.md  config.py  runtime.py
resources/hlrequirements/: 2026-05-20-camera-adapter-mvp.md  2026-05-21-metaguide-inspired-guiding.md  INDI_Steer_pattern.md  Items_to_fix_20260513.txt  Items_to_fix_20260514.txt  SmartTScope_AutoGain_Requirements.md  SmartTScope_Fixes_Requirements_20260506.md  SmartTScope_ToupTek_Device_Handling_Recommendation.md  autogain.md  camera_id list.md  camera_offset.md  camera_offset_estimation.md  development-state-review-2026-05-17.md  external_heartbeat_stop_supervisor.md  onstep_guiding_requirements.md  raspberry_pi5_trixie_watchdog_setup.md  requirements_addon_20260430.txt  requirements_addon_20260501.txt  requirements_addon_20260502.txt  requirements_addon_20260502b.txt  smarttscope_c8_collimation_assistant_task_plan_updated.md  smarttscope_incident_requirements_final_v1_2.md  smarttscope_onstep_adapter_replacement_requirements.md  smarttscope_polar_alignment_hlr.md
scripts/: astro_pull_start.sh  astro_start.sh  build_dist.py  check_connect_stall.sh  collect_logs.sh  commitmain.bat  delivery_audit.py  fix_git_editor.ps1  git-askpass.bat  git-askpass.cmd  git-askpass.ps1  inject_bahtinov_js.py  install_pi.sh  pi_pull_and_test.sh  pull-now.sh  push-main-https.cmd  push-main-https.ps1  push-main.ps1  push-merge-main.cmd  push-now.cmd  setup_touptek_pi.sh  start-smarttscopeDual.ps1  start.sh  startSmartTScope.bat  startSmartTScopeDual.bat  start_linux.sh  start_windows.bat  sync_camera_adapter.sh  test_onstep_serial.py
scripts/spikes/: setup_touptek_pi.sh  sp1_touptek_arm64.py  sp2_astap_pi.py  sp3_astroalign_feasibility.py
smart_telescope/: __main__.py  app.py  config.py  runtime.py
smart_telescope/api/: autofocus_sequence.py  autogain.py  bahtinov.py  bias_estimation.py  calibration.py  cameras.py  catalog.py  click_to_center.py  collimation.py  commands.py  cooling.py  dawn.py  deps.py  emergency.py  event_log.py  focuser.py  gpsd.py  guide_monitor.py  guiding.py  health.py  histogram.py  location.py  logs.py  milestones.py  mount.py  observing.py  optical_trains.py  performance_targets.py  polar.py  preview.py  queue.py  readiness.py  session.py  setup_check.py  solver.py  stack.py  stage1.py  version.py
smart_telescope/domain/: astap_diagnostic.py  autofocus.py  autogain.py  autogain_service.py  bad_pixel_map.py  bahtinov.py  bias_estimation.py  calibration_capture.py  calibration_store.py  camera_capabilities.py  camera_config_suggestion.py  camera_diagnostic.py  camera_profile.py  catalog.py  click_refinement.py  collimation_session.py  command_status.py  cooling.py  frame.py  (+35 more)
src/: SmartTScope.py
templates/: config.toml  stars.cfg
tests/: conftest.py
wiki/: autofocus.md  bahtinov-analyzer.md  hardware-platform.md  index.md  live-stacking.md  log.md  onstep-protocol.md  plate-solving.md  quickstart.md  requirements-addon-20260430.md  requirements-addon-20260501.md  requirements-addon-20260502b.md  requirements-addon-20260506.md  requirements-review.md  requirements.md  seestar-s50.md  smart-telescope.md  touptek-sdk.md  vaonis-vespera.md  vertical-slice-mvp.md
(+392 files in other folders)
