[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-telescope"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "astropy>=6.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "onstep-adapter @ https://github.com/tschoenfelder/OnStepAdapter/releases/download/v0.3.1/onstep_adapter-0.3.1-py3-none-any.whl",
    "smarttscope-live-analysis @ git+https://github.com/tschoenfelder/SmartTScopeLiveAnalysis.git@v0.1.0",
]

[project.scripts]
smarttscope = "smart_telescope.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.15",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
# NOT "smart_telescope*": that glob also matches stray sibling dirs like
# smart_telescope_old/ and bakes them into the wheel (seen on the Pi 2026-07-17)
include = ["smart_telescope", "smart_telescope.*"]

[tool.setuptools.package-data]
"smart_telescope" = ["static/*", "static/js/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"smart_telescope/api/**" = ["B008"]   # FastAPI Depends() in argument defaults is idiomatic

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "smart_telescope/__main__.py",
    "smart_telescope/tools/*",
    "smart_telescope/adapters/touptek/managed.py",
    "smart_telescope/adapters/touptek/filter_wheel.py",
    "smart_telescope/adapters/touptek/camera.py",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"
addopts = "--cov=smart_telescope --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
